<resources>
    <string name="app_name">UniSell</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_electronics">Electronics</string>
    <string name="nav_books">Books</string>
    <string name="nav_sports">Sport Equipments</string>
    <string name="nav_stationary">Stationary</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_orders">My Orders</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Electronics</item>
        <item>Books</item>
        <item>Sport Equipments</item>
        <item>Stationary</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Profile</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Profile</string>

    <string name="register_page">Unisell - Register</string>
    <string name="login_page">Unisell - Login</string>

    <string name="details">Details</string>
    <string name="soldby">Sold By</string>
    <string name="add_to_cart">Add to Cart</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Profile Activity -->
    <string name="my_orders">My Orders</string>
    <string name="view_all_orders">View All Orders</string>
    <string name="my_payments">My Payments</string>
    <string name="view_payments">View Payments</string>
    <string name="account_settings">Account Settings</string>
    <string name="sign_out">Sign Out</string>
</resources>
