<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_privacy_policy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/light_gray"
    tools:context="snu.spm.unisell.activity.ProfileActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingTop="@dimen/text_view_padding">


        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="@dimen/profile_picture_side"
            android:layout_height="@dimen/profile_picture_side"
            android:src="@drawable/profile_img"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorAccent"
            android:layout_gravity="center_horizontal" />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="John Doe"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/profile_name_text_size"
            android:gravity="center_horizontal"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0987654321"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/profile_number_text_size"
            android:gravity="center_horizontal"/>







        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="example@gmail.com"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/profile_number_text_size"
            android:layout_gravity="center_horizontal" />



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edit_icon"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginBottom="@dimen/margin_bottom"/>


    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_orders"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/heading_text_size"
            android:padding="@dimen/text_view_padding"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/light_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all_orders"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="end"
            android:textAllCaps="true"
            android:textSize="@dimen/sub_heading_text_size"
            android:padding="@dimen/text_view_padding"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_payments"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/heading_text_size"
            android:padding="@dimen/text_view_padding"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/light_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_payments"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="end"
            android:textAllCaps="true"
            android:textSize="@dimen/sub_heading_text_size"
            android:padding="@dimen/text_view_padding"/>


    </LinearLayout>

</LinearLayout>
