<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_product_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="snu.spm.unisell.activity.ProductDetailsActivity"
    android:orientation="vertical"
    android:background="@color/light_gray">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="395dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@color/colorAccent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/img"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/product_name"
                    android:text="Sony Headphones"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                <TextView
                    android:layout_width="96dp"
                    android:layout_height="45dp"
                    android:background="@color/darkgray"
                    android:id="@+id/price" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/product_details"
                android:text="Lorem\nipsum\ndolor\nsit\namet"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soldby"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/seller_name"
                    android:textColor="@color/light_gray"/>
                <LinearLayout
                    android:layout_width="74.67dp"
                    android:layout_height="34.67dp"
                    android:background="@color/login">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:id="@+id/rating"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seller_details"/>
        </LinearLayout>
        <Button
            android:layout_width="185dp"
            android:layout_height="40dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/add_to_cart"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
